--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -13,7 +13,7 @@
 <meta name="twitter:title" content="Contact"/>
 <meta name="twitter:description" content="Office:CAMP 199
 8 Clarkson Avenue
-Roomley Laboratory Building
+Rowley Laboratories
 CAMP 199
 Emails:cassiorampinelli@gmail.com
 rampincg@clarkson.edu"/>
@@ -113,7 +113,7 @@ rampincg@clarkson.edu"/>
 
     <p><strong>Office:</strong>CAMP 199<br />
     8 Clarkson Avenue<br />
-    Roomley Laboratory Building<br />
+    Rowley Laboratories<br />
     CAMP 199</p>
 
 <p><strong>Emails:</strong>cassiorampinelli@gmail.com<br />
