--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
           </li>
         
           <li class="navigation-item">
-            <a class="navigation-link" href="/">Blog</a>
+            <a class="navigation-link" href="/pt-br/posts/">Blog</a>
           </li>
         
           <li class="navigation-item">
