--- a/public/pt-br/pt-br/index.html
+++ b/public/pt-br/pt-br/index.html
@@ -107,6 +107,14 @@
     <h1 class="title">Posts</h1>
 
     <ul><li>
+  <span class="date">April 21, 2019</span>
+  <a class="title" href="/pt-br/posts/2019-04-21/">R e RStudio - Uma Visão Geral para os Primeiros Passos - Parte 2 de 2</a>
+</li>
+<li>
+  <span class="date">April 20, 2019</span>
+  <a class="title" href="/pt-br/posts/2019-04-20/">R e RStudio - Uma Visão Geral para os Primeiros Passos - Parte 1 de 2</a>
+</li>
+<li>
   <span class="date">March 25, 2019</span>
   <a class="title" href="/pt-br/posts/2019-03-25/">Metropolis Algorithm Applied To a Normal Distribution Assuming Unknown Mean and Variance</a>
 </li>
