--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -153,9 +153,27 @@
 Cordeiro Junior, Antônia Carolina C.P. de Azevedo, Lucio Melchiades da Mata Torres Gomes, Danilo Silva, André Luís Pereira Nunes, Raimundo Nonato C. Cordeiro Filho, Régis Pinto de Lima, Angelita Coelho, Matheus Pereira Borges, Bárbara Oliveira de Rezende, Rodrigo Cesar Azevedo Miguel, Salomar Mafaldo de Amorim Júnior, Márcia Regina Lima de Oliveira, Flavia Cabral Pereira,Paulo Roberto Farias Falcão, Rosilene Vaz Cavalcanti, Rafael Pereira Machado, Vitor Brasil Paixão da Costa, Marcus Vinicius Fagundes Mota, Teresa Cristina Cavalcante,Celso Moraes Peixoto Serra,Vitória Régia Coelho Costa,Antonio Henrique da Fontoura Klein,Charline Dalinghaus,Marcelo Sperle Dias,Celia Regina de Gouveia Souza,Carlos Eduardo Rezende,Gisele Porto, Nilton Eurípedes de Deus Filho,Janaína de Sousa Cunha, Gabriel Angotti Magnino, Bárbara Luciana da Conceição, Marcos Maia Porto, Hortencia Maria Barboza de Assis, Márcio Martins Valle, Lindino Benedet.</p></li>
 </ul>
 
-<p><strong>Funding:</strong> Federal Government - Coastal Management Integration Group - <a href="https://www.mma.gov.br/pol%C3%ADtica-de-res%C3%ADduos-s%C3%B3lidos/item/8956-sub-grupo-de-trabalho">GI-GERCO</a></p>
+<p><strong>Funding:</strong> Brazilian Federal Government - Coastal Management Integration Group - <a href="https://www.mma.gov.br/pol%C3%ADtica-de-res%C3%ADduos-s%C3%B3lidos/item/8956-sub-grupo-de-trabalho">GI-GERCO</a></p>
 
 <p><strong>Product:</strong> <a href="http://www.mdr.gov.br/images/stories/ArquivosDefesaCivil/ArquivosPDF/publicacoes/Final_Guia-de-Diretrizes_09112018.pdf">Guidelines for Coastal Erosion Prevention and Protection</a> (<em>In Portuguese</em>)</p>
+
+<ul>
+<li><strong>(2013-2018) - Guidelines for Debris Flow Countermeasures - <a href="https://www.jica.go.jp/english/news/press/2017/170601_01.html">GIDES PROJECT-BRAZIL</a></strong></li>
+</ul>
+
+<p><strong>Objectives:</strong> Development of a document with general guidelines for debris flow countermeasures in Brazil.</p>
+
+<p><strong>Project Members for Debris Flow Manual:</strong></p>
+
+<ul>
+<li><p>Coordination: Cássio Guilherme Rampinelli, Érico de Castro Borges e Magno Gonçalves da Costa.</p></li>
+
+<li><p>Participants: Bráulio Eduardo da Silva Maia, Leonardo de Almeida Ferreira,Marcus Vinícius Fagundes Mota, Paulo Roberto Farias Falcão, Anna Laura Lopes da Silva Nunes, Dimitry Znamensky, Faiçal Massad, Marcelo Fischer Gramani, Roberto Quental Coutinho, Akinori Naruto, Ingrid Lima, Kenichiriro Tominaga, Takao Hori, Takao Yamakoshi, Toshiya Takeshi, Yoshifumi Shimoda, Bruna Nakaharada, Carolina Umeraba, Cristina Matayoshi, Goro Kodama, Ilze Maeda</p></li>
+</ul>
+
+<p><strong>Funding:</strong> Brazilian Federal Government/ <a href="http://www.kkc.co.jp/english/cms/detail/news/1766.html">JICA-Japan</a></p>
+
+<p><strong>Product:</strong> <a href="http://www.mdr.gov.br/images/stories/ArquivosDefesaCivil/ArquivosPDF/Volume4-ManualTecnicoparaIntervencoesEstruturaisparaFluxodeDetritos_SEDEC.pdf">Guidelines for Debris Flow Countermeasures</a> (<em>In Portuguese</em>)</p>
 
 <ul>
 <li><strong>(2005-2006) - METAHIDRO - Methodologies for the Treatment of Hydrotechnical Problems in Dam Engineering</strong></li>
