--- a/public/pt-br/index.html
+++ b/public/pt-br/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 
   <head>
+
+    <meta name="google-site-verification" content="UGg4XSkiKIPLnXFcu1rqYyz_hlcOOHD2nLVKh5M-5Gk" />  
+    <meta name="google-site-verification" content="kw_ScZ0siznlTrOHk3mUdJ3cc6FtaEWHq0ul5u-5BE0" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
