--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -142,7 +142,7 @@
 <li><strong>(2014-2018) - Guidelines for Coastal Erosion Prevention and Protection</strong></li>
 </ul>
 
-<p><strong>Objectives:</strong> Development of a document with general guidelines for coastal protection works.</p>
+<p><strong>Objectives:</strong> Development of general guidelines for coastal protection works in Brazil.</p>
 
 <p><strong>Project Members:</strong></p>
 
@@ -161,7 +161,7 @@ Cordeiro Junior, Antônia Carolina C.P. de Azevedo, Lucio Melchiades da Mata Tor
 <li><strong>(2013-2018) - Guidelines for Debris Flow Countermeasures - <a href="https://www.jica.go.jp/english/news/press/2017/170601_01.html">GIDES PROJECT-BRAZIL</a></strong></li>
 </ul>
 
-<p><strong>Objectives:</strong> Development of a document with general guidelines for debris flow countermeasures in Brazil.</p>
+<p><strong>Objectives:</strong> Development of general guidelines for debris flow countermeasures in Brazil.</p>
 
 <p><strong>Project Members for Debris Flow Manual:</strong></p>
 
