--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -11,7 +11,7 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Publications"/>
-<meta name="twitter:description" content="Refereed Publications   RAMPINELLI, C. G.; SMITH, T.; MARSHALL, L.A.(2019). On the Relationship Between Classification, Optimization, and Regionalization. AGU-Fall Meeting, San Francisco, USA.
+<meta name="twitter:description" content="Refereed Publications   RAMPINELLI, C. G. ; KNACK, I.; SMITH, T.; (2020). Flood Mapping Uncertainty from a Restoration Perspective: A Practical Case Study. Water, v. 12, p. 1948, doi:doi.org/10.3390/w12071948
   MAGNO G. C. ; RAMPINELLI, C. G. ; BORGES, E.C.; MAIA, B.E.S., MOTA, M.V.F., FALCÃO, P.R.F., SHIMODA, Y., ZNAMENSKY, D.V. (2020). Standard Countermeasures Studies for Debris Flow Disasters in Brazil.In: International Journal of Erosion Control Engineering, Vol.13, No.1,12-22, doi:https://doi.org/10.13101/ijece.13.12
   Complete works published in proceedings of conferences   BAKI, B."/>
 
