--- a/public/publications/index.html
+++ b/public/publications/index.html
@@ -119,8 +119,8 @@
     <h2 id="refereed-publications">Refereed Publications</h2>
 <ol>
 <li>
-<p><strong>RAMPINELLI, C. G.</strong>; SMITH, T.; MARSHALL, L.A.(2019). <a href="https://agu.confex.com/agu/fm19/meetingapp.cgi/Paper/582282">On the Relationship Between Classification, Optimization, and Regionalization.</a> AGU-Fall Meeting, San Francisco, USA.</p>
-</li>
+<p><strong>RAMPINELLI, C. G.</strong>; KNACK, I.; SMITH, T.; (2020). <a href="https://www.mdpi.com/2073-4441/12/7/1948">Flood Mapping Uncertainty from a Restoration Perspective: A Practical Case Study. Water, v. 12, p. 1948.</a>, doi:doi.org/10.3390/w12071948</p>
+</ol>
 <li>
 <p>MAGNO G. C. ; <strong>RAMPINELLI, C. G.</strong> ; BORGES, E.C.; MAIA, B.E.S., MOTA, M.V.F., FALCÃO, P.R.F., SHIMODA, Y., ZNAMENSKY, D.V. (2020). <a href="https://www.jstage.jst.go.jp/article/ijece/13/1/13_12/_article/-char/en">Standard Countermeasures Studies for Debris Flow Disasters in Brazil.In: International Journal of Erosion Control Engineering, Vol.13, No.1,12-22</a>, doi:https://doi.org/10.13101/ijece.13.12</p>
 </li>
