--- a/public/pt-br/2019-04-21/index.html
+++ b/public/pt-br/2019-04-21/index.html
@@ -158,7 +158,7 @@
 <p>Os principais objetivos deste post são:</p>
 
 <ul>
-<li><p>Continuar a apresentação geral do R/ RStudio mostrada <a href="http://rpubs.com/cassiorampinelli/488999">aqui</a></p></li>
+<li><p>Continuar a apresentação geral do R/ RStudio mostrada <a href="pt-br/NetTrans/form.php">aqui</a></p></li>
 
 <li><p>Apresentar uma noção geral de como processar comandos básicos no R/Rstudio;</p></li>
 
