--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -11,11 +11,11 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Contato"/>
-<meta name="twitter:description" content="Sala: CAMP 199
-8 Clarkson Avenue
-Rowley Laboratories
-CAMP 199
-Emails: cassiorampinelli@gmail.com
+<meta name="twitter:description" content="
+
+
+
+Emails: 
 rampincg@clarkson.edu"/>
 
 
