--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -119,13 +119,13 @@ rampincg@clarkson.edu"/>
       <h1>Contato</h1>
     </header>
 
-    <p><strong>Sala:</strong> CAMP 199<br />
-      8 Clarkson Avenue<br />
-      Rowley Laboratories<br />
-      CAMP 199</p>
+    <p><strong>Sala:</strong> <br />
+      <br />
+      <br />
+      </p>
 
-<p><strong>Emails:</strong> cassiorampinelli@gmail.com<br />
-            rampincg@clarkson.edu</p>
+<p><strong>Emails:</strong> <br />
+            </p>
 
   </article>
 </section>
