--- a/public/courses/index.html
+++ b/public/courses/index.html
@@ -32,7 +32,7 @@
   
     
   
-  <meta name="description" content="PhD Student" />
+  <meta name="description" content="PhD Water Resources Engineering" />
 
   
     <link rel="alternate" hreflang="pt" href="/pt/courses/" />
@@ -299,7 +299,7 @@
   <meta property="og:site_name" content="Cássio Rampinelli" />
   <meta property="og:url" content="/courses/" />
   <meta property="og:title" content="Courses | Cássio Rampinelli" />
-  <meta property="og:description" content="PhD Student" /><meta property="og:image" content="/images/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_2.png" />
+  <meta property="og:description" content="PhD Water Resources Engineering" /><meta property="og:image" content="/images/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_2.png" />
     <meta property="twitter:image" content="/images/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_2.png" /><meta property="og:locale" content="en-us" />
   
     
